bk_ida/gccida/c3/final
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2155:4: error: expected ';' after expression
rtx v9; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2155:5: error: use of undeclared identifier 'v9'
rtx v9; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2158:4: error: expected ';' after expression
rtx i; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2158:5: error: use of undeclared identifier 'i'
rtx i; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2178:1: error: use of undeclared identifier 'v9'
v9 = first; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2181:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2183:10: error: use of undeclared identifier 'v9'
rtuint = v9[2].fld[0].rtuint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2187:1: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2187:6: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2189:9: error: use of undeclared identifier 'v9'
while ( v9 ); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2192:7: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, ( __int64)insn_addresses_, ( unsigned int)prescan, v11) ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2192:32: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, ( __int64)insn_addresses_, ( unsigned int)prescan, v11) ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2192:56: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, ( __int64)insn_addresses_, ( unsigned int)prescan, v11) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2192:35: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, ( __int64)insn_addresses_, ( unsigned int)prescan, v11) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/final.c:2194:7: error: use of undeclared identifier 'i'
v13 = i->fld[0].rtuint; 
      ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/final/src/obj/final.o] Error 1
